--- a/Laboratorio3.ipynb
+++ b/Laboratorio3.ipynb
@@ -3327,6 +3327,34 @@
    "source": [
     "DieselUltraLS: En los gráficos proporcionados, se observan las predicciones realizadas por dos modelos LSTM diferentes para la serie temporal \"DieselUltraLS\". El primer modelo muestra una mayor variabilidad y un patrón de predicción errático, donde las predicciones tienen picos abruptos y desajustes considerables respecto a los valores reales. Por otro lado, el segundo modelo muestra un ajuste más coherente con los datos reales, aunque todavía hay variaciones significativas. Sin embargo, a diferencia del primer modelo, el segundo logra capturar mejor las tendencias generales y la forma de los datos reales. Este comportamiento indice que el segundo modelo tiene un mejor desempeño, ya que a pesar de no ser perfecto, sigue más de cerca la evolución de los datos históricos, minimizando los errores extremos observados en el primer modelo."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gas licuado: El primer modelo parece ser superior al segundo en este caso, ya que, aunque ambos modelos muestran desvíos, el primero mantiene una mayor coherencia con la tendencia real y muestra menos fluctuaciones extremas en las predicciones. El segundo modelo, aunque captura la tendencia, introduce más ruido en las predicciones, lo que indica que es menos preciso en términos de ajuste a los datos históricos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DieselLs: El segundo modelo parece ser más preciso, ya que logra capturar mejor la tendencia general de los datos reales y presenta menos volatilidad en las predicciones. Mientras que el primer modelo sufre de fluctuaciones excesivas y no se ajusta bien a los periodos de baja variabilidad, el segundo modelo muestra un mejor desempeño al seguir más de cerca la evolución de los datos históricos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gasolina Regular:  El primer modelo parece ser superior  ya que sus predicciones son más consistentes y están más alineadas con los datos reales, con menos fluctuaciones extremas. Aunque ambos modelos siguen la tendencia general, el primer modelo proporciona una representación más suave y estable de los datos, lo que lo hace más confiable para esta serie temporal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Ambos modelos presentan dificultades para capturar completamente la volatilidad de los datos reales, pero el segundo modelo parece hacerlo ligeramente mejor, ya que predice de manera más precisa las fluctuaciones significativas que el primer modelo tiende a suavizar. Aún así, ambos modelos se quedan cortos en capturar los picos máximos y mínimos."
+   ]
   }
  ],
  "metadata": {
